Removed Ipsum Fixed Line Spacing Added more space between paragraphs

--- a/public_html/stylesheets/main.css
+++ b/public_html/stylesheets/main.css
@@ -67,7 +67,7 @@ h2 {
 }
 
 p + p {
-	margin-top: 8px;
+	margin-top: 2em;
 }
 
 a {
@@ -79,6 +79,10 @@ a {
 
 a:hover {
 	color: #8c9440;
+}
+
+em {
+	font-weight: bold;
 }
 
 .name {
@@ -114,4 +118,5 @@ a:hover {
 	font-size: 1.3em;
 	margin-left:  20%;
 	margin-right: 20%;
+	line-height: 1.2em;
 }
